# xiaozhi

./: CMakeLists.txt  README.md  package-lock.json  partitions.csv  readme
main/: CMakeLists.txt  idf_component.yml  main.c
main/App/: App_Application.c  App_Application.h  App_Audio.c  App_Audio.h  App_Communication.c  App_Communication.h  App_Display.c  App_Display.h  App_OTA.c  App_OTA.h
main/Common/: Common_Config.c  Common_Config.h  Common_Debug.c  Common_Debug.h
main/Dri/: Driver_HttpClient.c  Driver_HttpClient.h  Driver_WIFI.c  Driver_WIFI.h  Driver_WebSocket.c  Driver_WebSocket.h
main/Inf/: Inf_Decoder.c  Inf_Decoder.h  Inf_ES8311.c  Inf_ES8311.h  Inf_Encoder.c  Inf_Encoder.h  Inf_IOT.c  Inf_IOT.h  Inf_Lcd.c  Inf_Lcd.h  Inf_Led.c  Inf_Led.h  Inf_SR.c  Inf_SR.h  Inf_key.c  Inf_key.h
